--- a/Calculate_significance.ipynb
+++ b/Calculate_significance.ipynb
@@ -48,17 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZTF can access 33000.00 sq. deg of sky over a year.\n",
-      "ZTF found 17.0 TDEs in 1.5 years in 33000 sq. deg, giving 0.00034 new TDEs per sq. deg per year\n",
-      "We assume that each TDE is visible for an average of 0.5 years, giving a detection rate of 0.00017 observed TDEs per sq deg at any one time.\n",
-      "Given a TDE rate of 0.00017 per sq. deg in ZTF and a radio-loud fraction 0.20, we expect 0.0028 across all observed neutrinos\n"
+      "ZTF can access 22000.00 sq. deg of sky over a year.\n",
+      "ZTF found 17.0 TDEs in 1.5 years in 33000 sq. deg, giving 0.00052 new TDEs per sq. deg per year orgiving 1.4e-06 new TDEs per sq. deg per year\n",
+      "We assume that each TDE is visible for an average of 0.5 years, giving a detection rate of 0.00026 observed TDEs per sq deg at any one time.\n",
+      "Given a TDE rate of 0.00026 per sq. deg in ZTF and a radio-loud fraction 0.20, we have a final rate of 5.2e-05\n",
+      "We thus expect 0.0042 across all observed neutrinos\n"
      ]
     }
    ],
@@ -69,6 +70,9 @@
     "# ZTF can observe between -30 deg and +90 deg\n",
     "\n",
     "frac_ztf = (np.sin(np.radians(90)) - np.sin(np.radians(-30))) / 2.\n",
+    "frac_ztf = 0.5\n",
+    "\n",
+    "# Take half?\n",
     "\n",
     "ztf_sky = night_sky * frac_ztf\n",
     "\n",
@@ -76,7 +80,9 @@
     "\n",
     "ztf_tde_disc_rate = ztf_n_tde / 1.5 / ztf_sky\n",
     "\n",
-    "print(f\"ZTF found {ztf_n_tde} TDEs in 1.5 years in 33000 sq. deg, giving {ztf_tde_disc_rate:.2g} new TDEs per sq. deg per year\")\n",
+    "print(f\"ZTF found {ztf_n_tde} TDEs in 1.5 years in 33000 sq. deg, \"\n",
+    "      f\"giving {ztf_tde_disc_rate:.2g} new TDEs per sq. deg per year or\"\n",
+    "      f\"giving {(ztf_tde_disc_rate/365.25):.2g} new TDEs per sq. deg per year\")\n",
     "\n",
     "n_year = 0.5\n",
     "\n",
@@ -86,13 +92,16 @@
     "\n",
     "frac_rl = 2./10.\n",
     "\n",
-    "ztf_expectation = ztf_tde_rate * frac_rl * area_ztf\n",
-    "print(f\"Given a TDE rate of {ztf_tde_rate:.2g} per sq. deg in ZTF and a radio-loud fraction {frac_rl:.2f}, we expect {ztf_expectation:.2g} across all observed neutrinos\")"
+    "ztf_rl_tde_rate = ztf_tde_rate * frac_rl\n",
+    "\n",
+    "ztf_expectation = ztf_rl_tde_rate * area_ztf\n",
+    "print(f\"Given a TDE rate of {ztf_tde_rate:.2g} per sq. deg in ZTF and a radio-loud fraction {frac_rl:.2f}, we have a final rate of {ztf_rl_tde_rate:.2g}\")\n",
+    "print(f\"We thus expect {ztf_expectation:.2g} across all observed neutrinos\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value: 0.0028\n"
+      "p-value: 0.0042\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
-       "Corresponds to: 2.88 $\\sigma$"
+       "Corresponds to: 2.64 $\\sigma$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
