add derivation of hillas radius.

--- a/Radio_analysis.ipynb
+++ b/Radio_analysis.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -202,8 +202,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-6-4021f1265fa8>:12: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
+      "<ipython-input-5-4d4e63a17284>:12: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
       "  ax4 = plt.subplot(311)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.00524647e+48 1.80591390e+48 3.68921928e+48 7.29427293e+48] erg\n"
      ]
     },
     {
@@ -245,6 +252,9 @@
     "    color=\"red\",\n",
     "    label=r\"AT2019dsg\"\n",
     ")\n",
+    "\n",
+    "print(equipartition_energy(peak_f, peak_flux))\n",
+    "\n",
     "# ax4.plot(dates - t_peak_mjd.mjd, equipartition_energy(peak_f, peak_flux, f_a=0.1),  marker=\"*\", color=\"blue\", label=r\"Conical ($f_{A}=0.1$)\")\n",
     "\n",
     "l2 = ax4.plot(\n",
