Model radio spectrum.

--- a/Neutrino.ipynb
+++ b/Neutrino.ipynb
@@ -24,28 +24,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.912023005428146\n",
-      "2.4620880846025374e-06 1 / cm2\n",
-      "40.61593109742186 m2\n",
-      "181.80464395988827 m2\n"
+      "Effective area (EHE): 20.31 m2\n",
+      "Effective area (Alert): 90.90 m2\n"
      ]
     }
    ],
    "source": [
     "# Simple approximation scaling from TXS 0506+056\n",
     "\n",
-    "x = [200 * 10**12, 10*10.**15]\n",
+    "# x = [200 * 10**12, 10*10.**15]\n",
+    "x = [100 * 10**12, 10*10.**15]\n",
+    "\n",
     "\n",
     "e_integral = np.log(x[1]/x[0])\n",
-    "print(e_integral)\n",
     "\n",
     "ul_txs_6_month_flux = 5. * 10 **-11. * u.erg / (u.cm**2 * u.s)\n",
     "ul_txs_6_month = ul_txs_6_month_flux /(flux_conversion/u.cm**2)\n",
     "\n",
     "fluence = ((1./(x[0] * (1*(u.eV).to(\"erg\")))) * u.erg * ul_txs_6_month_flux * (0.5 * u.year).to(\"s\")/(u.erg**2.))\n",
-    "print(fluence)\n",
     "a_eff_ehe = (1./fluence).to(\"m2\")\n",
-    "print(a_eff_ehe)\n",
+    "print(f\"Effective area (EHE): {a_eff_ehe:.2f}\")\n",
     "\n",
     "# print(((e_integral * u.eV) / (ul_txs_6_month_flux * (0.5 * u.year).to(\"s\"))).to(\"m2\"))\n",
     "\n",
@@ -53,7 +51,7 @@
     "ul_6_month_alert = ul_txs_6_month / ratio_ehe_alert\n",
     "\n",
     "a_eff_alert = a_eff_ehe * ratio_ehe_alert\n",
-    "print(a_eff_alert)"
+    "print(f\"Effective area (Alert): {a_eff_alert:.2f}\")"
    ]
   },
   {
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -189,7 +187,7 @@
        "Text(0.5, 1.0, 'IceCube Effective Area (-5$^{\\\\circ}$ < $\\\\delta$ < 30$^{\\\\circ}$)')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,39 +238,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def integrate_aeff(aeff_df, power=2.0):\n",
+    "def integrate_aeff(aeff_df, power=2.0, e_min_gev=x[0]/(10.**9.), e_max_gev=x[1]/(10.**9.)):\n",
     "    n_iter = int(len(aeff_df[\"E_TeV\"])/int(2))\n",
     "\n",
     "    a_eff = 0.\n",
-    "\n",
+    "    \n",
     "    for i in range(n_iter):\n",
     "        lower = 2*i\n",
     "        upper = 2*i + 1\n",
     "        e_min = aeff_df[\"E_TeV\"][lower] * 10**3\n",
     "        e_max = aeff_df[\"E_TeV\"][upper] * 10**3\n",
-    "        int_factor = (1./e_min**(power - 1.) - 1./e_max**(power - 1.)) * u.GeV\n",
-    "        aeff = np.mean([aeff_df[\"A_eff\"][lower], aeff_df[\"A_eff\"][upper]]) * u.m**2\n",
-    "        a_eff += int_factor * aeff\n",
+    "        \n",
+    "        if np.logical_and(e_min > e_min_gev, e_min < e_max_gev):\n",
+    "        \n",
+    "            int_factor = (1./e_min**(power - 1.) - 1./e_max**(power - 1.)) * u.GeV\n",
+    "            aeff = np.mean([aeff_df[\"A_eff\"][lower], aeff_df[\"A_eff\"][upper]]) * u.m**2\n",
+    "            a_eff += int_factor * aeff\n",
     "    \n",
     "    return a_eff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Effective area increase EHE+GFU:EHE = 3.10\n",
-      "This assumes an $E^{-2.00}$ Power Law\n",
-      "A flux normalisation of 1.4e-11 erg / (cm2 s) at 1 GeV is required for an expectation of one high-energy neutrino alert\n"
+      "A flux normalisation of 1e-08 1 / (cm2 GeV s) is required for an expectation of one neutrino alert\n",
+      "A flux of 1.7e-11 erg / (cm2 s) at 1 GeV is required for an expectation of one neutrino alert\n",
+      "A flux normalisation of 3.3e-08 1 / (cm2 GeV s) is required for an expectation of one neutrino alert\n",
+      "A flux of 5.2e-11 erg / (cm2 s) at 1 GeV is required for an expectation of one neutrino alert\n",
+      "A flux normalisation of 0.00012 1 / (cm2 GeV s) is required for an expectation of one neutrino alert\n",
+      "A flux of 1.9e-07 erg / (cm2 s) at 1 GeV is required for an expectation of one neutrino alert\n",
+      "Effective area increase EHE+GFU:EHE = 3.17\n",
+      "This assumes an $E^{-2.00}$ Power Law\n"
      ]
     }
    ],
@@ -282,45 +288,67 @@
     "a_eff_vals = []\n",
     "norms = []\n",
     "\n",
-    "for aeff_df in [aeff_ehe_gfu, aeff_ehe, aeff_hese]:\n",
+    "int_energy = []\n",
+    "\n",
+    "for i, aeff_df in enumerate([aeff_ehe_gfu, aeff_ehe, aeff_hese]):\n",
     "    \n",
-    "    a_eff = integrate_aeff(aeff_df, power=power)\n",
+    "    e_min_gev = x[0]/(10. ** 9.)\n",
+    "    e_max_gev = x[1]/(10. ** 9.)\n",
+    "    \n",
+    "    a_eff = integrate_aeff(aeff_df, power=power, e_min_gev=e_min_gev, e_max_gev=e_max_gev)\n",
     "\n",
     "    norm_1gev = ((1.*u.GeV)**2./a_eff/(0.5*u.year)).to(\"erg cm^-2 s^-1\")\n",
     "    norm_100tev = norm_1gev * ((100 * u.TeV).to(\"GeV\")/ u.GeV) ** -power\n",
-    "    \n",
-    "    norms.append(norm_1gev)\n",
+    "        \n",
+    "    norms.append(norm_1gev.to(\"GeV cm^-2 s^-1\")/(1.* u.GeV**2))\n",
     "    \n",
     "    a_eff_vals.append(a_eff)\n",
+    "    \n",
+    "    if power == 2.0:\n",
+    "        int_factor = np.log(e_max_gev/e_min_gev)\n",
+    "        int_energy.append(int_factor)\n",
+    "    else:\n",
+    "        int_power = 2.0 - power\n",
+    "        int_factor = ((e_max ** int_power) - (e_min ** int_power))/(int_power)\n",
+    "        raise Exception(\"Integrate!\")\n",
+    "        \n",
+    "    print(f\"A flux normalisation of {norms[i]:.2g} is required for an expectation of one neutrino alert\")\n",
+    "    print(f\"A flux of {norm_1gev:.2g} at 1 GeV is required for an expectation of one neutrino alert\")\n",
     "\n",
     "print(f\"Effective area increase EHE+GFU:EHE = {(a_eff_vals[0]/a_eff_vals[1]):.2f}\")\n",
-    "print(r\"This assumes an $E^{-\" + str(f\"{power:.2f}\") + r\"}$ Power Law\")\n",
-    "print(f\"A flux normalisation of {norms[0]:.2g} at 1 GeV is required for an expectation of one high-energy neutrino alert\")"
+    "print(r\"This assumes an $E^{-\" + str(f\"{power:.2f}\") + r\"}$ Power Law\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Required flux for one alert: 0.00022 erg / cm2\n",
-      "Required energy for one alert: 1.4e+51 erg\n"
+      "Required time-integrated flux normalisation for one alert: 0.16 1 / (cm2 GeV) at 1GeV\n",
+      "Required fluence for one alert: 0.75 GeV / cm2\n",
+      "Required fluence for one alert: 0.0012 erg / cm2\n",
+      "Required energy for one alert: 8e+51 erg\n"
      ]
     }
    ],
    "source": [
     "flux_t = norms[0] * (0.5*u.year).to(\"s\")\n",
-    "print(f\"Required flux for one alert: {flux_t:.2g}\")\n",
-    "print(f\"Required energy for one alert: {(flux_t/(flux_conversion / u.cm**2)):.2g}\")"
+    "print(f\"Required time-integrated flux normalisation for one alert: {flux_t:.2g} at 1GeV\")\n",
+    "print(f\"Required fluence for one alert: {(flux_t * (int_energy[0] * u.GeV**2.)):.2g}\")\n",
+    "fluence_erg = (flux_t * (int_energy[0] * u.GeV**2.)).to(\"erg cm^-2\")\n",
+    "print(f\"Required fluence for one alert: {fluence_erg:.2g}\")\n",
+    "\n",
+    "en = (((int_energy[0] * u.GeV**2. * flux_t)/(flux_conversion / u.cm**2)).to(\"erg\"))\n",
+    "print(f\"Required energy for one alert: {en:.2g}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,30 +356,30 @@
     "    return 7.3 * 10**48. * u.erg * f_a**(-12./19.) * baryon_loading **(11./16.)\n",
     "\n",
     "def n_exp(f_a=0.1, baryon_loading=100.):\n",
-    "    return expected_energy(f_a, baryon_loading)/(flux_t/(flux_conversion / u.cm**2))"
+    "    return (expected_energy(f_a, baryon_loading).to(\"GeV\")/(int_energy[0] * u.GeV**2. * flux_t.to(\"GeV^-1 cm^-2\")/(flux_conversion / u.cm**2) )).to(\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$0.5169619 \\; \\mathrm{}$"
+       "$0.092977156 \\; \\mathrm{}$"
       ],
       "text/plain": [
-       "<Quantity 0.5169619>"
+       "<Quantity 0.09297716>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_exp()"
+    "n_exp(baryon_loading=100.)"
    ]
   },
   {
