--- a/Hillas_radius.ipynb
+++ b/Hillas_radius.ipynb
@@ -4,15 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{E_{max}}{PeV} \\approx \\frac{B}{10^{-6}Gauss} \\times \\frac{R}{pc} \\times \\frac{\\Gamma Z} {2}$$\n",
+    "$$\\frac{E_{max}}{PeV} \\approx \\frac{B}{10^{-6}Gauss} \\times \\frac{R}{pc} \\times \\frac{\\beta Z} {2}$$\n",
     "\n",
-    "$$\\frac{E_{max}}{PeV} \\approx \\frac{B}{10^{-6}Gauss} \\times \\frac{R}{3.1 \\times 10^{18} cm} \\times \\frac{\\Gamma Z}{2}$$\n",
+    "$$\\frac{E_{max}}{PeV} \\approx \\frac{B}{10^{-6}Gauss} \\times \\frac{R}{3.1 \\times 10^{18} cm} \\times \\frac{\\beta Z}{2}$$\n",
     "\n",
-    "$$\\frac{E_{max}}{PeV} \\approx \\frac{1}{6.2 \\times 10^{2} \\times 10^{-6}}\\frac{B}{Gauss} \\times \\frac{R}{10^{16} cm} \\times \\Gamma Z$$\n",
-    "$$\\frac{E_{max}}{PeV} \\approx 1600 \\times \\frac{B}{Gauss} \\times \\frac{R}{10^{16} cm} \\times \\Gamma Z $$\n",
+    "$$\\frac{E_{max}}{PeV} \\approx \\frac{1}{6.2 \\times 10^{2} \\times 10^{-6}}\\frac{B}{Gauss} \\times \\frac{R}{10^{16} cm} \\times \\beta Z$$\n",
+    "$$\\frac{E_{max}}{PeV} \\approx 1600 \\times \\frac{B}{Gauss} \\times \\frac{R}{10^{16} cm} \\times \\beta Z $$\n",
     "\n",
-    "$$ E_{max} \\approx 1600 \\times 0.6 \\times 5 \\times \\Gamma 1 PeV = 4870 PeV $$"
+    "$$ E_{max} \\approx 1600 \\times 0.6 \\times 5 \\times \\beta 1 PeV = 4870 PeV $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
