Add additional ipynbs

--- a/Radio_analysis.ipynb
+++ b/Radio_analysis.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +213,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-11-c5898f48d615>:12: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
+      "<ipython-input-7-12583165547d>:12: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
       "  ax4 = plt.subplot(311)\n"
      ]
     },
@@ -221,7 +221,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8.00394618e+47 1.73948968e+48 3.83765467e+48 7.22033579e+48] erg\n"
+      "[8.00394618e+47 1.73948968e+48 3.83765467e+48 7.22033579e+48] erg\n",
+      "[1.0627270099667944e+16, 1.578932522969842e+16, 2.432706739917825e+16, 4.4431582564269144e+16]\n"
      ]
     },
     {
@@ -324,6 +325,9 @@
     "    color=\"red\",\n",
     "    label=r\"Spherical ($f_{A}=1.0$)\"\n",
     ")\n",
+    "\n",
+    "print([x.value for x in equipartition_radius(peak_f, peak_flux)])\n",
+    "\n",
     "ax5.plot(\n",
     "    asassn_14li_data.T[0]  - li_offset,\n",
     "    [x.value for x in equipartition_radius(asassn_14li_data.T[1], asassn_14li_data.T[2], z=asassn_14li_z)],\n",
