--- a/fit_radio_data.ipynb
+++ b/fit_radio_data.ipynb
@@ -21,6 +21,7 @@
     "from scipy.optimize import leastsq\n",
     "from astropy import units as u\n",
     "from astropy import constants as const\n",
+    "from astropy.time import Time\n",
     "from data import bran_disc, bran_z\n",
     "import pandas as pd\n",
     "from astropy.coordinates import Distance\n",
@@ -66,13 +67,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2019-05-22', '2019-06-19', '2019-08-08', '2019-10-05']\n"
+     ]
+    }
+   ],
    "source": [
     "data_rec = astropy.io.ascii.read('./data/at2019dsg_merged.dat', format='fixed_width')\n",
     "\n",
     "data_rec['eflux_mJy'] = np.clip(data_rec['eflux_mJy'], 0.1*data_rec['flux_mJy'], 1e99) # force errors?\n",
     "\n",
     "mjd_plot = np.array([58625, 58653, 58703, 58761]) #58818\n",
+    "\n",
+    "ts = []\n",
+    "for x in mjd_plot:\n",
+    "    date = Time(x, format=\"mjd\")\n",
+    "    date.format = \"iso\"\n",
+    "    date.out_subfmt = 'date'\n",
+    "    ts.append(date.value)\n",
+    "print(ts)\n",
     "\n",
     "B_single = np.zeros((len(mjd_plot),2))\n",
     "B_sum = np.zeros((len(mjd_plot),2))\n",
@@ -518,11 +535,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     MJD  R_cm_16  eR_cm_16  B_Gauss  eB_Gauss  E_erg_48  eE_erg_48\n",
-      "0  58625     1.91      0.08     0.94      0.05      1.02       0.17\n",
-      "1  58653     3.17      0.08     0.69      0.02      2.52       0.23\n",
-      "2  58703     5.13      0.13     0.52      0.01      5.99       0.56\n",
-      "3  58761     8.75      0.23     0.31      0.01     10.74       0.98\n",
       "\\documentclass{article}%\n",
       "\\usepackage[T1]{fontenc}%\n",
       "\\usepackage[utf8]{inputenc}%\n",
@@ -545,12 +557,12 @@
       "\\label{subsec:Tableofsomething}%\n",
       "\\begin{tabular}{|c|c|c|c|c|c|c|}%\n",
       "\\hline%\n",
-      "\\textbf{Observation Date (MJD)}&\\textbf{$R_{eq} (10^{16}$ cm)}&\\textbf{$\\sigma_{R} (10^{16}$ cm)}&\\textbf{$B_{eq}$ (Gauss)}&\\textbf{$\\sigma_{B}$ (Gauss)}&\\textbf{$E_{eq} (10^{48}$ erg)}&\\textbf{$\\sigma_{E} (10^{48}$ erg)}\\\\%\n",
+      "\\textbf{Observation Date}&\\textbf{$R_{eq} (10^{16}$ cm)}&\\textbf{$\\sigma_{R} (10^{16}$ cm)}&\\textbf{$B_{eq}$ (Gauss)}&\\textbf{$\\sigma_{B}$ (Gauss)}&\\textbf{$E_{eq} (10^{48}$ erg)}&\\textbf{$\\sigma_{E} (10^{48}$ erg)}\\\\%\n",
       "\\hline%\n",
-      "58625.0&1.91&0.08&0.94&0.05&1.02&0.17\\\\%\n",
-      "58653.0&3.17&0.08&0.69&0.02&2.52&0.23\\\\%\n",
-      "58703.0&5.13&0.13&0.52&0.01&5.99&0.56\\\\%\n",
-      "58761.0&8.75&0.23&0.31&0.01&10.74&0.98\\\\%\n",
+      "2019{-}05{-}22&1.91&0.08&0.94&0.05&1.02&0.17\\\\%\n",
+      "2019{-}06{-}19&3.17&0.08&0.69&0.02&2.52&0.23\\\\%\n",
+      "2019{-}08{-}08&5.13&0.13&0.52&0.01&5.99&0.56\\\\%\n",
+      "2019{-}10{-}05&8.75&0.23&0.31&0.01&10.74&0.98\\\\%\n",
       "\\hline%\n",
       "\\end{tabular}\n",
       "\n",
@@ -566,7 +578,7 @@
    ],
    "source": [
     "df = pd.read_table(fname, sep=\" \")\n",
-    "print(df)\n",
+    "df[\"MJD\"] = ts\n",
     "\n",
     "# df[\"R_cm\"] /= 10.**16.\n",
     "# # df[\"eR_cm\"] /= 10.**16.\n",
@@ -574,7 +586,7 @@
     "# df[\"eE_erg\"] /= 10.**48.\n",
     "\n",
     "col_headings = [\n",
-    "    \"Observation Date (MJD)\",\n",
+    "    \"Observation Date\",\n",
     "    r\"$R_{eq} (10^{16}$ cm)\",\n",
     "    r\"$\\sigma_{R} (10^{16}$ cm)\",\n",
     "    r\"$B_{eq}$ (Gauss)\",\n",
