--- a/pp-crossection.ipynb
+++ b/pp-crossection.ipynb
@@ -13,15 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optical depth - pp =  10244.81665143766\n",
-      "optical depth - xe =  171600.67891158082\n",
       "optical depth - pg: 10231.643391785161 cm3 W / (J m2)\n",
       "Optical lum: 1.123987831050666e+43 erg / s\n",
       "Number of photons: 1.822545278971486e+58 cm2 W / (J m2)\n",
@@ -43,21 +41,20 @@
     "t_bb = pow(10,4.65) * u.K\n",
     "e_g = 2.7 * const.k_B * t_bb \n",
     "\n",
-    "r_dens = 1e17 *u.cm# normalization for density\n",
-    "g_dens = -2.5 # power law index for radius scaling r^g_dens\n",
+    "r_dens = (10.**16.860) *u.cm# normalization for density\n",
     "dens_nt = 5 * 10 ** 4 * 100 /(u.cm**3)# cm^-3 @ r_dens cm\n",
     "# dens = dens_nt * 100.\n",
-    "dens = 10 ** 9. / (u.cm**3)\n",
+    "dens = 10 ** 7. / (u.cm**3)\n",
     "# dens = dens_nt \n",
     "\n",
     "\n",
-    "column_density = dens* r_dens * -1 * (g_dens+1) * pow(r_0/r_dens,g_dens+1)\n",
+    "# column_density = dens* r_dens * -1 * (g_dens+1) * pow(r_0/r_dens,g_dens+1)\n",
     "\n",
     "optical_lumi = const.sigma_sb * np.pi * pow(r_bb,2) * pow(t_bb,4)\n",
     "photon_density = optical_lumi/e_g/4/np.pi/pow(r_0,2)/3e10\n",
     "\n",
-    "print(\"optical depth - pp = \",column_density * xsec_pp)\n",
-    "print(\"optical depth - xe = \",column_density * xsec_xe)\n",
+    "# print(\"optical depth - pp = \",column_density * xsec_pp)\n",
+    "# print(\"optical depth - xe = \",column_density * xsec_xe)\n",
     "print(\"optical depth - pg:\",photon_density*xsec_pg*r_0) \n",
     "print(f\"Optical lum: {optical_lumi.to('erg s-1')}\")\n",
     "print(\"Number of photons:\",optical_lumi/const.k_B/t_bb) \n",
@@ -67,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,26 +73,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.144330939392e+16 cm\n",
-      "Column density: 4.0, 2.561204162859415e+29 1 / cm2, 10244.81665143766\n"
+      "7.244359600749891e+23 1 / cm2 2.59020683712e+17 cm\n",
+      "Optical Depth: 0.028977438402999565\n"
      ]
     }
    ],
    "source": [
     "integrated_path = r_dens * dens\n",
     "\n",
-    "path = (0.2 * const.c * 80 * u.day).to(\"cm\")\n",
-    "print(path)\n",
+    "path = (const.c * 100 * u.day).to(\"cm\")\n",
+    "print(integrated_path, path)\n",
     "\n",
-    "print(f\"Column density: {integrated_path * xsec_pp}, {column_density}, {column_density * xsec_pp}\")"
+    "print(f\"Optical Depth: {integrated_path * xsec_pp}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
