--- a/Calculate_significance.ipynb
+++ b/Calculate_significance.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +58,8 @@
       "ZTF can access 22000.00 sq. deg of sky over a year.\n",
       "ZTF found 17.0 TDEs in 1.5 years in 33000 sq. deg, giving 0.00052 new TDEs per sq. deg per year orgiving 1.4e-06 new TDEs per sq. deg per year\n",
       "We assume that each TDE is visible for an average of 0.5 years, giving a detection rate of 0.00026 observed TDEs per sq deg at any one time.\n",
-      "Given a TDE rate of 0.00026 per sq. deg in ZTF and a radio-loud fraction 0.29, we have a final rate of 7.4e-05\n",
-      "We thus expect 0.006 across all observed neutrinos\n"
+      "Given a TDE rate of 0.000258 per sq. deg in ZTF and a radio-loud fraction 0.12, we have a final rate of 3e-05\n",
+      "We thus expect 0.00246 across all observed neutrinos\n"
      ]
     }
    ],
@@ -95,8 +95,8 @@
     "ztf_rl_tde_rate = ztf_tde_rate * frac_rl\n",
     "\n",
     "ztf_expectation = ztf_rl_tde_rate * area_ztf\n",
-    "print(f\"Given a TDE rate of {ztf_tde_rate:.2g} per sq. deg in ZTF and a radio-loud fraction {frac_rl:.2f}, we have a final rate of {ztf_rl_tde_rate:.2g}\")\n",
-    "print(f\"We thus expect {ztf_expectation:.2g} across all observed neutrinos\")"
+    "print(f\"Given a TDE rate of {ztf_tde_rate:.3g} per sq. deg in ZTF and a radio-loud fraction {frac_rl:.2f}, we have a final rate of {ztf_rl_tde_rate:.2g}\")\n",
+    "print(f\"We thus expect {ztf_expectation:.3g} across all observed neutrinos\")"
    ]
   },
   {
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value: 0.0059\n"
+      "p-value: 0.00595\n"
      ]
     },
     {
@@ -138,11 +138,34 @@
     "\n",
     "p_value = pdf.sf(0)\n",
     "\n",
+    "# p_value = 0.002\n",
+    "\n",
     "sigma = norm.ppf(1. - p_value)\n",
     "\n",
-    "print(f\"p-value: {p_value:.2g}\")\n",
+    "print(f\"p-value: {p_value:.3g}\")\n",
     "display(Markdown((rf\"Corresponds to: {sigma:.2f} $\\sigma$\")))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
